--- a/src/views/users/dashboard.ejs
+++ b/src/views/users/dashboard.ejs
@@ -10,5 +10,25 @@
         <input type="text" name="symbol" placeholder="crypto token">
         <button>Add</button>
     </form>
+
+    <br/>
+    <br/>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Symbol</th>
+                <th>Value</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% userSymbols.forEach(userSymbol => { %>
+                <tr>
+                    <td><%= userSymbol.symbol %></td>
+                    <td></td>
+                </tr>
+            <% }) %>
+        </tbody>
+    </table>
 </body>
 </html>
