--- a/src/views/users/dashboard.ejs
+++ b/src/views/users/dashboard.ejs
@@ -25,7 +25,7 @@
             <% userSymbols.forEach(userSymbol => { %>
                 <tr>
                     <td><%= userSymbol?.symbol %></td>
-                    <td><%= symbolValues.find(e => e.symbol === userSymbol.symbol).value %></td>
+                    <td><%= symbolValues.find(e => e?.symbol === userSymbol?.symbol)?.value %></td>
                 </tr>
             <% }) %>
         </tbody>
