seeing github consent

--- a/src/views/guests/welcome.ejs
+++ b/src/views/guests/welcome.ejs
@@ -6,6 +6,6 @@
     <title>Welcome to cryptoapp</title>
 </head>
 <body>
-    <a style="font-size: 28px;" href="">Connect with Github</a>
+    <a style="font-size: 28px;" href="/github/authorize">Connect with Github</a>
 </body>
 </html>
