--- a/src/views/users/dashboard.ejs
+++ b/src/views/users/dashboard.ejs
@@ -70,6 +70,10 @@
     </style>
 </head>
 <body>
+
+    <a href="/users/logout">logout</a>
+    <br/>
+    <br/>
     <form method="POST" action="/users/symbols/add">
         <input type="text" name="symbol" placeholder="crypto token">
         <button>Add</button>
